fix gap between tabs

--- a/Real Projects/Creditor Solutions/src/styles/layout/_common.scss
+++ b/Real Projects/Creditor Solutions/src/styles/layout/_common.scss
@@ -979,6 +979,7 @@ main {
         transform: scale(1.02);
         background-color: $white;
         transition: all .5s ease;
+        margin: 30px 0;
 
         .tab_title {
             font-weight: 600;
